bug fixes to shiftup/down

--- a/TaskList2/style.css
+++ b/TaskList2/style.css
@@ -61,10 +61,10 @@ i {
   overflow: hidden;
   margin-right: 2rem;
 }
-#completed-text{
+#completed-text {
   text-decoration: line-through;
 }
-#clear-completed{
+#clear-completed {
   margin-top: 2rem;
 }
 .btn-container {
@@ -104,5 +104,15 @@ i {
   }
   .hero-body {
     width: 90vw;
+  }
+  .message span {
+    font-size: 1rem !important;
+  }
+  .message-body:hover {
+    border: 1px solid;
+    border-left: 10px solid;
+    opacity: 1;
+    cursor: pointer;
+    width: 100%;
   }
 }
